[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/fan.gd" type="Script" id=2]
[ext_resource path="res://Sound/fan.wav" type="AudioStream" id=3]
[ext_resource path="res://Texturs/Sprites1.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 16, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 16, 112, 32, 32 )

[sub_resource type="Animation" id=5]
resource_name = "Work"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ SubResource( 1 ), SubResource( 2 ) ]
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 16.0001, 15.9999 )

[sub_resource type="SegmentShape2D" id=15]
b = Vector2( 32, 0 )

[sub_resource type="SegmentShape2D" id=16]
b = Vector2( 32, 0 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 2
emission_box_extents = Vector3( 0, 5, 0 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0

[node name="Fan" type="StaticBody2D" groups=["LevelNav"]]
rotation = 6.28318
z_index = 1
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Work"
anims/Work = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.27177e-06, -5.69969e-06 )
shape = SubResource( 14 )

[node name="WindArea" type="Area2D" parent="."]
position = Vector2( 8, -4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WindArea"]
position = Vector2( 8, 5.5 )
shape = SubResource( 15 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WindArea"]
position = Vector2( 8, -5.5 )
shape = SubResource( 16 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WindArea"]
position = Vector2( 8, 0 )
shape = SubResource( 16 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 14, -4 )
lifetime = 0.2
local_coords = false
process_material = SubResource( 12 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
autoplay = true
max_distance = 250.0

[connection signal="body_entered" from="WindArea" to="." method="_on_WindArea_body_entered"]
[connection signal="body_exited" from="WindArea" to="." method="_on_WindArea_body_exited"]
